--- a/Makestagram/Storyboards/Main.storyboard
+++ b/Makestagram/Storyboards/Main.storyboard
@@ -9,10 +9,10 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--Photos View Controller-->
         <scene sceneID="y6V-kS-vDj">
             <objects>
-                <viewController id="Lvo-jq-uun" sceneMemberID="viewController">
+                <viewController title="Photos View Controller" id="Lvo-jq-uun" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="QgI-OH-q9C"/>
                         <viewControllerLayoutGuide type="bottom" id="sBd-CB-3kZ"/>
@@ -28,7 +28,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Ca3-ju-dPJ" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="104" y="240"/>
+            <point key="canvasLocation" x="-1218" y="1260"/>
         </scene>
         <!--Item 3-->
         <scene sceneID="sxX-wD-kI0">
@@ -49,28 +49,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="cb0-xB-WAs" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="103" y="908"/>
-        </scene>
-        <!--Home View Controller-->
-        <scene sceneID="WTA-pK-g5t">
-            <objects>
-                <viewController id="gsd-P8-f7x" customClass="HomeViewController" customModule="Makestagram" customModuleProvider="target" sceneMemberID="viewController">
-                    <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="mT3-uu-K97"/>
-                        <viewControllerLayoutGuide type="bottom" id="C50-C7-tYe"/>
-                    </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" id="Fhf-3q-ra7">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                    </view>
-                    <tabBarItem key="tabBarItem" title="" image="tab_home_black" id="fhF-Db-p2e">
-                        <inset key="imageInsets" minX="0.0" minY="7" maxX="0.0" maxY="-7"/>
-                    </tabBarItem>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="8SR-Wd-5Ss" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="104" y="-415"/>
+            <point key="canvasLocation" x="209" y="1260"/>
         </scene>
         <!--Main Tab Bar Controller-->
         <scene sceneID="klg-tv-8Nd">
@@ -82,18 +61,27 @@
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                     </tabBar>
                     <connections>
-                        <segue destination="gsd-P8-f7x" kind="relationship" relationship="viewControllers" id="9QH-cS-peJ"/>
+                        <segue destination="0e9-PV-bX3" kind="relationship" relationship="viewControllers" id="9QH-cS-peJ"/>
                         <segue destination="Lvo-jq-uun" kind="relationship" relationship="viewControllers" id="k8R-sU-c5s"/>
                         <segue destination="ExZ-cr-msn" kind="relationship" relationship="viewControllers" id="lcY-mB-Gu0"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="CG2-T8-VGW" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-846" y="-88"/>
+            <point key="canvasLocation" x="-1218" y="323"/>
+        </scene>
+        <!--Home-->
+        <scene sceneID="0Dh-lD-UyI">
+            <objects>
+                <viewControllerPlaceholder storyboardName="Home" id="0e9-PV-bX3" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Item" id="DPy-gM-d6d"/>
+                </viewControllerPlaceholder>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="9cM-Za-cgV" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-2558" y="972"/>
         </scene>
     </scenes>
     <resources>
-        <image name="tab_home_black" width="25" height="25"/>
         <image name="tab_plus_black" width="25" height="25"/>
         <image name="tab_profile_black" width="25" height="25"/>
     </resources>
