--- a/Makestagram/Storyboards/Home.storyboard
+++ b/Makestagram/Storyboards/Home.storyboard
@@ -6,10 +6,12 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12089"/>
+        <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Home View Controller-->
+        <!--Makestagram-->
         <scene sceneID="WTA-pK-g5t">
             <objects>
                 <viewController id="gsd-P8-f7x" customClass="HomeViewController" customModule="Makestagram" customModuleProvider="target" sceneMemberID="viewController">
@@ -25,8 +27,46 @@
                                 <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" reuseIdentifier="PostHeaderCell" rowHeight="54" id="Qfv-c1-R62" customClass="PostHeaderCell" customModule="Makestagram" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="28" width="375" height="54"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="Qfv-c1-R62" id="0Xj-Tr-zIz">
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="53.5"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="iLK-73-xOu">
+                                                    <rect key="frame" x="323" y="4" width="44" height="44"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="44" id="5zj-2z-M1z"/>
+                                                        <constraint firstAttribute="width" constant="44" id="XEV-fJ-Wag"/>
+                                                    </constraints>
+                                                    <state key="normal" image="btn_options_black"/>
+                                                    <connections>
+                                                        <action selector="optionsClicked:" destination="Qfv-c1-R62" eventType="touchUpInside" id="Fqd-R0-eaD"/>
+                                                    </connections>
+                                                </button>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="username" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Yvu-Sq-tHq">
+                                                    <rect key="frame" x="23" y="8" width="76" height="37.5"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstItem="Yvu-Sq-tHq" firstAttribute="top" secondItem="0Xj-Tr-zIz" secondAttribute="topMargin" id="3Ui-cq-T6E"/>
+                                                <constraint firstItem="Yvu-Sq-tHq" firstAttribute="leading" secondItem="0Xj-Tr-zIz" secondAttribute="leadingMargin" constant="15" id="Fbi-15-8pf"/>
+                                                <constraint firstAttribute="bottomMargin" secondItem="Yvu-Sq-tHq" secondAttribute="bottom" id="IJN-15-9uJ"/>
+                                                <constraint firstItem="iLK-73-xOu" firstAttribute="centerY" secondItem="0Xj-Tr-zIz" secondAttribute="centerY" id="PBC-Xe-BtB"/>
+                                                <constraint firstAttribute="trailingMargin" relation="greaterThanOrEqual" secondItem="Yvu-Sq-tHq" secondAttribute="trailing" constant="15" id="gL0-YY-YQQ"/>
+                                                <constraint firstAttribute="trailingMargin" secondItem="iLK-73-xOu" secondAttribute="trailing" id="szd-Me-EhD"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                        <connections>
+                                            <outlet property="usernameLabel" destination="Yvu-Sq-tHq" id="0QE-20-FRo"/>
+                                        </connections>
+                                    </tableViewCell>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" reuseIdentifier="PostImageCell" rowHeight="375" id="Qy5-xq-A5w" customClass="PostImageCell" customModule="Makestagram" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="28" width="375" height="375"/>
+                                        <rect key="frame" x="0.0" y="82" width="375" height="375"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="Qy5-xq-A5w" id="Wdr-8D-HTF">
                                             <rect key="frame" x="0.0" y="0.0" width="375" height="374.5"/>
@@ -47,6 +87,65 @@
                                             <outlet property="postImageView" destination="2mK-0z-ant" id="BmU-eP-lW5"/>
                                         </connections>
                                     </tableViewCell>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" reuseIdentifier="PostActionCell" rowHeight="46" id="BBN-7f-xN9" customClass="PostActionCell" customModule="Makestagram" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="457" width="375" height="46"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="BBN-7f-xN9" id="ou4-kv-etS">
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="45.5"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="80f-gh-qJK">
+                                                    <rect key="frame" x="10" y="8" width="29.5" height="29.5"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" secondItem="80f-gh-qJK" secondAttribute="height" multiplier="1:1" id="DQ5-qL-Qb4"/>
+                                                    </constraints>
+                                                    <state key="normal" image="btn_heart_black_outline"/>
+                                                    <state key="selected" image="btn_heart_red_solid"/>
+                                                    <connections>
+                                                        <action selector="likeClicked:" destination="BBN-7f-xN9" eventType="touchUpInside" id="7LH-Yl-0E5"/>
+                                                    </connections>
+                                                </button>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="5 Likes" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Cev-4X-rSk">
+                                                    <rect key="frame" x="39.5" y="8" width="47.5" height="29.5"/>
+                                                    <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="14"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="31 MINUTES AGO" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Uvr-je-QBA">
+                                                    <rect key="frame" x="259.5" y="8" width="92.5" height="29.5"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="11"/>
+                                                    <color key="textColor" red="0.60392156862745094" green="0.60392156862745094" blue="0.60392156862745094" alpha="1" colorSpace="calibratedRGB"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Cyl-TM-xVA">
+                                                    <rect key="frame" x="15" y="45" width="345" height="0.5"/>
+                                                    <color key="backgroundColor" red="0.85882352941176465" green="0.85882352941176465" blue="0.85882352941176465" alpha="1" colorSpace="calibratedRGB"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="0.5" id="3r3-TH-wXS"/>
+                                                    </constraints>
+                                                </view>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstAttribute="trailing" secondItem="Cyl-TM-xVA" secondAttribute="trailing" constant="15" id="1cg-lJ-6oR"/>
+                                                <constraint firstItem="Uvr-je-QBA" firstAttribute="top" secondItem="ou4-kv-etS" secondAttribute="topMargin" id="3CI-YJ-lK0"/>
+                                                <constraint firstAttribute="bottomMargin" secondItem="Uvr-je-QBA" secondAttribute="bottom" id="OyT-wS-0NG"/>
+                                                <constraint firstItem="Cyl-TM-xVA" firstAttribute="leading" secondItem="ou4-kv-etS" secondAttribute="leading" constant="15" id="Pgh-gc-jtj"/>
+                                                <constraint firstAttribute="trailingMargin" secondItem="Uvr-je-QBA" secondAttribute="trailing" constant="15" id="TCD-kH-zrj"/>
+                                                <constraint firstItem="80f-gh-qJK" firstAttribute="top" secondItem="ou4-kv-etS" secondAttribute="topMargin" id="W11-rh-1bW"/>
+                                                <constraint firstItem="80f-gh-qJK" firstAttribute="leading" secondItem="ou4-kv-etS" secondAttribute="leadingMargin" constant="2" id="dFy-i3-ca8"/>
+                                                <constraint firstAttribute="bottom" secondItem="Cyl-TM-xVA" secondAttribute="bottom" id="eKj-b3-vjv"/>
+                                                <constraint firstAttribute="bottomMargin" secondItem="80f-gh-qJK" secondAttribute="bottom" id="kYq-4x-iUp"/>
+                                                <constraint firstAttribute="bottomMargin" secondItem="Cev-4X-rSk" secondAttribute="bottom" id="neD-In-Uml"/>
+                                                <constraint firstItem="Cev-4X-rSk" firstAttribute="top" secondItem="ou4-kv-etS" secondAttribute="topMargin" id="vQc-b1-CIu"/>
+                                                <constraint firstItem="Cev-4X-rSk" firstAttribute="leading" secondItem="80f-gh-qJK" secondAttribute="trailing" id="z7t-eM-oRE"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                        <connections>
+                                            <outlet property="likeButton" destination="80f-gh-qJK" id="XaK-Oz-3hJ"/>
+                                            <outlet property="likeCountLabel" destination="Cev-4X-rSk" id="qjL-My-I6W"/>
+                                            <outlet property="timeAgoLabel" destination="Uvr-je-QBA" id="gYj-bX-H3G"/>
+                                        </connections>
+                                    </tableViewCell>
                                 </prototypes>
                                 <connections>
                                     <outlet property="dataSource" destination="gsd-P8-f7x" id="s0h-DQ-FYo"/>
@@ -62,7 +161,7 @@
                             <constraint firstItem="YxM-ZE-B0V" firstAttribute="top" secondItem="Fhf-3q-ra7" secondAttribute="top" id="xPg-lt-htk"/>
                         </constraints>
                     </view>
-                    <navigationItem key="navigationItem" id="Thr-3e-hUO"/>
+                    <navigationItem key="navigationItem" title="Makestagram" id="Thr-3e-hUO"/>
                     <connections>
                         <outlet property="tableView" destination="YxM-ZE-B0V" id="aFr-B3-169"/>
                     </connections>
@@ -95,6 +194,9 @@
         </scene>
     </scenes>
     <resources>
+        <image name="btn_heart_black_outline" width="24" height="24"/>
+        <image name="btn_heart_red_solid" width="24" height="24"/>
+        <image name="btn_options_black" width="24" height="24"/>
         <image name="tab_home_black" width="25" height="25"/>
     </resources>
 </document>
