--- a/Makestagram/Storyboards/Main.storyboard
+++ b/Makestagram/Storyboards/Main.storyboard
@@ -42,12 +42,33 @@
                     <connections>
                         <segue destination="0e9-PV-bX3" kind="relationship" relationship="viewControllers" id="9QH-cS-peJ"/>
                         <segue destination="Lvo-jq-uun" kind="relationship" relationship="viewControllers" id="k8R-sU-c5s"/>
-                        <segue destination="v0b-rh-ekB" kind="relationship" relationship="viewControllers" id="lcY-mB-Gu0"/>
+                        <segue destination="zk0-C7-1db" kind="relationship" relationship="viewControllers" id="97S-rz-eLU"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="CG2-T8-VGW" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="-1218" y="323"/>
+        </scene>
+        <!--Item-->
+        <scene sceneID="Maw-9D-o6S">
+            <objects>
+                <viewController id="zk0-C7-1db" customClass="ProfileViewController" customModule="Makestagram" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="MSV-yZ-ub0"/>
+                        <viewControllerLayoutGuide type="bottom" id="NJk-PZ-w5w"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="6FF-0t-ITL">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                    <tabBarItem key="tabBarItem" title="Item" image="tab_profile_black" id="tfi-Q4-mbH">
+                        <inset key="imageInsets" minX="0.0" minY="7" maxX="0.0" maxY="-7"/>
+                    </tabBarItem>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="yEn-gg-3hn" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-188" y="1260"/>
         </scene>
         <!--Home-->
         <scene sceneID="0Dh-lD-UyI">
@@ -59,18 +80,9 @@
             </objects>
             <point key="canvasLocation" x="-2558" y="972"/>
         </scene>
-        <!--FindFriends-->
-        <scene sceneID="Rez-XK-UBH">
-            <objects>
-                <viewControllerPlaceholder storyboardName="FindFriends" id="v0b-rh-ekB" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="Item" id="f0J-Mr-YsV"/>
-                </viewControllerPlaceholder>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="J1R-Cq-fd5" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="158" y="972"/>
-        </scene>
     </scenes>
     <resources>
         <image name="tab_plus_black" width="25" height="25"/>
+        <image name="tab_profile_black" width="25" height="25"/>
     </resources>
 </document>
