--- a/Makestagram/Storyboards/Main.storyboard
+++ b/Makestagram/Storyboards/Main.storyboard
@@ -42,33 +42,12 @@
                     <connections>
                         <segue destination="0e9-PV-bX3" kind="relationship" relationship="viewControllers" id="9QH-cS-peJ"/>
                         <segue destination="Lvo-jq-uun" kind="relationship" relationship="viewControllers" id="k8R-sU-c5s"/>
-                        <segue destination="zk0-C7-1db" kind="relationship" relationship="viewControllers" id="97S-rz-eLU"/>
+                        <segue destination="v7s-Pc-zV4" kind="relationship" relationship="viewControllers" id="97S-rz-eLU"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="CG2-T8-VGW" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="-1218" y="323"/>
-        </scene>
-        <!--Item-->
-        <scene sceneID="Maw-9D-o6S">
-            <objects>
-                <viewController id="zk0-C7-1db" customClass="ProfileViewController" customModule="Makestagram" customModuleProvider="target" sceneMemberID="viewController">
-                    <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="MSV-yZ-ub0"/>
-                        <viewControllerLayoutGuide type="bottom" id="NJk-PZ-w5w"/>
-                    </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" id="6FF-0t-ITL">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                    </view>
-                    <tabBarItem key="tabBarItem" title="Item" image="tab_profile_black" id="tfi-Q4-mbH">
-                        <inset key="imageInsets" minX="0.0" minY="7" maxX="0.0" maxY="-7"/>
-                    </tabBarItem>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="yEn-gg-3hn" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="-188" y="1260"/>
         </scene>
         <!--Home-->
         <scene sceneID="0Dh-lD-UyI">
@@ -78,11 +57,20 @@
                 </viewControllerPlaceholder>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="9cM-Za-cgV" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-2558" y="972"/>
+            <point key="canvasLocation" x="-1971" y="972"/>
+        </scene>
+        <!--Profile-->
+        <scene sceneID="Stk-pG-pvg">
+            <objects>
+                <viewControllerPlaceholder storyboardName="Profile" id="v7s-Pc-zV4" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Item" id="SUP-le-UiT"/>
+                </viewControllerPlaceholder>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="ulC-Mq-9eS" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-480" y="972"/>
         </scene>
     </scenes>
     <resources>
         <image name="tab_plus_black" width="25" height="25"/>
-        <image name="tab_profile_black" width="25" height="25"/>
     </resources>
 </document>
